// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots HashtagsTable should render a "no data" state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "920px",
      }
    }
  >
    <div
      className="sc-jKJlTe hrcOlX"
    >
      <header
        className="sc-eNQAEJ heJaNC"
      >
        <h2
          className="sc-hMqMXs klQmSI"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 600,
              }
            }
          >
            Hashtag performance
          </span>
        </h2>
      </header>
      <div
        className="sc-jwKygS ecOeLh"
      >
        <div
          className="sc-iELTvK fdEaKF"
        >
          <div
            className="sc-iAyFgw dijWDi"
          >
            <span
              style={
                Object {
                  "color": "#59626a",
                  "fontFamily": "\\"Roboto\\", sans-serif",
                  "fontSize": "1rem",
                  "fontWeight": 400,
                }
              }
            >
              We didn’t find any hashtags in the posts sent
              <span>
                <span>
                   between 
                  August 10th
                   and 
                  September 12th
                </span>
              </span>
              . If you’d like to learn more about hashtags, see this post on the Buffer Blog: 
              <a
                href="https://blog.bufferapp.com/a-scientific-guide-to-hashtags-which-ones-work-when-and-how-many?utm_source=buffer&utm_medium=analyze&utm_campaign=hashtags"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "color": "#168eea",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "outline": "none",
                    "padding": "0",
                    "textDecoration": "none",
                  }
                }
                target="_self"
              >
                How to Use Hashtags: How Many, Best Ones, and Where to Use Them
              </a>
              .
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots HashtagsTable should render a "no data" state for yesterday 1`] = `
<span>
  <div
    style={
      Object {
        "width": "920px",
      }
    }
  >
    <div
      className="sc-jKJlTe hrcOlX"
    >
      <header
        className="sc-eNQAEJ heJaNC"
      >
        <h2
          className="sc-hMqMXs klQmSI"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 600,
              }
            }
          >
            Hashtag performance
          </span>
        </h2>
      </header>
      <div
        className="sc-jwKygS ecOeLh"
      >
        <div
          className="sc-iELTvK fdEaKF"
        >
          <div
            className="sc-iAyFgw dijWDi"
          >
            <span
              style={
                Object {
                  "color": "#59626a",
                  "fontFamily": "\\"Roboto\\", sans-serif",
                  "fontSize": "1rem",
                  "fontWeight": 400,
                }
              }
            >
              We didn’t find any hashtags in the posts sent
              <span>
                <span>
                   on 
                  September 10th
                </span>
              </span>
              . If you’d like to learn more about hashtags, see this post on the Buffer Blog: 
              <a
                href="https://blog.bufferapp.com/a-scientific-guide-to-hashtags-which-ones-work-when-and-how-many?utm_source=buffer&utm_medium=analyze&utm_campaign=hashtags"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "color": "#168eea",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "outline": "none",
                    "padding": "0",
                    "textDecoration": "none",
                  }
                }
                target="_self"
              >
                How to Use Hashtags: How Many, Best Ones, and Where to Use Them
              </a>
              .
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots HashtagsTable should render a loading state 1`] = `
<span>
  <div
    style={
      Object {
        "width": "920px",
      }
    }
  >
    <div
      className="sc-jKJlTe hrcOlX"
    >
      <header
        className="sc-eNQAEJ heJaNC"
      >
        <h2
          className="sc-hMqMXs klQmSI"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 600,
              }
            }
          >
            Hashtag performance
          </span>
        </h2>
      </header>
      <div
        className="sc-jwKygS ecOeLh"
      >
        <div
          className="sc-bwzfXH cXJzrG"
        >
          <div
            className="sc-bdVaJa fsNrov"
          >
            <div
              style={
                Object {
                  "textAlign": "center",
                }
              }
            >
              <div
                style={
                  Object {
                    "height": "1rem",
                    "margin": "0 auto 1rem auto",
                    "position": "relative",
                    "width": "1rem",
                  }
                }
              >
                <span>
                  <div
                    style={
                      Object {
                        "height": "1rem",
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "top": 0,
                        "transition": "all 1000ms ease-in-out",
                        "width": "1rem",
                      }
                    }
                  >
                    <svg
                      height="100%"
                      style={
                        Object {
                          "fill": "#59626a",
                          "height": "1rem",
                          "width": "1rem",
                        }
                      }
                      version="1.1"
                      viewBox="0 0 16 16"
                      width="100%"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlnsXlink="http://www.w3.org/1999/xlink"
                    >
                      <g
                        className="shuttleGray"
                      >
                        <path
                          d="M1.10241622,4.34038738 L7.75166358,7.40469806 C7.88821853,7.46764349 8.11178147,7.46764349 8.24833642,7.40469806 L14.8975838,4.34038738 C15.0341387,4.27744195 15.0341387,4.17446518 14.8975838,4.11151975 L8.24833642,1.04720908 C8.11178147,0.984263641 7.88821853,0.984263641 7.75166358,1.04720908 L1.10241622,4.11151975 C0.965861261,4.17446518 0.965861261,4.27744195 1.10241622,4.34038738"
                        />
                      </g>
                    </svg>
                  </div>
                </span>
              </div>
              <span
                style={
                  Object {
                    "color": "#59626a",
                    "fontFamily": "\\"Roboto\\", sans-serif",
                    "fontSize": "1rem",
                    "fontWeight": 400,
                  }
                }
              >
                Loading...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots HashtagsTable should render the hashtags table 1`] = `
<span>
  <div
    style={
      Object {
        "width": "920px",
      }
    }
  >
    <div
      className="sc-jKJlTe hrcOlX"
    >
      <header
        className="sc-eNQAEJ heJaNC"
      >
        <h2
          className="sc-hMqMXs klQmSI"
        >
          <span
            style={
              Object {
                "color": "#323b43",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1.25rem",
                "fontWeight": 600,
              }
            }
          >
            Hashtag performance
          </span>
        </h2>
        <span>
          <button
            className="sc-kgoBCf cmMzae"
            onClick={[Function]}
          >
            <span
              style={
                Object {
                  "color": "#323b43",
                  "fontFamily": "\\"Roboto\\", sans-serif",
                  "fontSize": "0.75rem",
                  "fontWeight": 500,
                }
              }
            />
          </button>
        </span>
      </header>
      <div
        className="sc-jwKygS ecOeLh"
      >
        <div
          id="js-dom-to-png-hashtags"
        >
          <div
            className="sc-iELTvK fdEaKF"
          >
            <ol
              className="sc-cmTdod eHPnCY"
            >
              <li
                className="sc-hSdWYo ialkZe"
              >
                <div
                  className="sc-jAaTju hGtsWl sc-cMljjf jqqWCD sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Rank
                  </span>
                </div>
                <div
                  className="sc-jWBwVP bnrwMw sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Hashtag
                  </span>
                </div>
                <div
                  className="sc-cvbbAY gVmkPl sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Posts
                  </span>
                  <div
                    className="sc-jDwBTQ jBppTt"
                  >
                    <button
                      aria-label={null}
                      disabled={undefined}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "background": "none",
                          "backgroundColor": "unset",
                          "border": "none",
                          "borderRadius": "unset",
                          "color": "unset",
                          "cursor": "pointer",
                          "display": "unset",
                          "fontFamily": "unset",
                          "fontSize": "unset",
                          "fontWeight": "unset",
                          "lineHeight": "unset",
                          "margin": "unset",
                          "outline": "none",
                          "padding": 0,
                          "transition": "unset",
                        }
                      }
                    >
                      <div
                        className="sc-bZQynM bhDWTq"
                      >
                        <svg
                          fill="none"
                          height="11"
                          viewBox="0 0 11 11"
                          width="11"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            fill="white"
                            height="11"
                            width="11"
                          />
                          <path
                            d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                            fill="#ced7df"
                            transform="translate(1 2)"
                          />
                        </svg>
                      </div>
                    </button>
                    <button
                      aria-label={null}
                      disabled={undefined}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "background": "none",
                          "backgroundColor": "unset",
                          "border": "none",
                          "borderRadius": "unset",
                          "color": "unset",
                          "cursor": "pointer",
                          "display": "unset",
                          "fontFamily": "unset",
                          "fontSize": "unset",
                          "fontWeight": "unset",
                          "lineHeight": "unset",
                          "margin": "unset",
                          "outline": "none",
                          "padding": 0,
                          "transition": "unset",
                        }
                      }
                    >
                      <div
                        className="sc-bZQynM bhDWTq"
                      >
                        <svg
                          fill="none"
                          height="11"
                          viewBox="0 0 11 11"
                          width="11"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            fill="white"
                            height="11"
                            width="11"
                          />
                          <path
                            d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                            fill="#ced7df"
                            transform="translate(10 9) rotate(-180)"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Average 
                    Reach
                  </span>
                  <div
                    className="sc-jDwBTQ jBppTt"
                  >
                    <button
                      aria-label={null}
                      disabled={undefined}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "background": "none",
                          "backgroundColor": "unset",
                          "border": "none",
                          "borderRadius": "unset",
                          "color": "unset",
                          "cursor": "pointer",
                          "display": "unset",
                          "fontFamily": "unset",
                          "fontSize": "unset",
                          "fontWeight": "unset",
                          "lineHeight": "unset",
                          "margin": "unset",
                          "outline": "none",
                          "padding": 0,
                          "transition": "unset",
                        }
                      }
                    >
                      <div
                        className="sc-bZQynM bhDWTq"
                      >
                        <svg
                          fill="none"
                          height="11"
                          viewBox="0 0 11 11"
                          width="11"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            fill="white"
                            height="11"
                            width="11"
                          />
                          <path
                            d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                            fill="#ced7df"
                            transform="translate(1 2)"
                          />
                        </svg>
                      </div>
                    </button>
                    <button
                      aria-label={null}
                      disabled={undefined}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "background": "none",
                          "backgroundColor": "unset",
                          "border": "none",
                          "borderRadius": "unset",
                          "color": "unset",
                          "cursor": "pointer",
                          "display": "unset",
                          "fontFamily": "unset",
                          "fontSize": "unset",
                          "fontWeight": "unset",
                          "lineHeight": "unset",
                          "margin": "unset",
                          "outline": "none",
                          "padding": 0,
                          "transition": "unset",
                        }
                      }
                    >
                      <div
                        className="sc-bZQynM bhDWTq"
                      >
                        <svg
                          fill="none"
                          height="11"
                          viewBox="0 0 11 11"
                          width="11"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            fill="white"
                            height="11"
                            width="11"
                          />
                          <path
                            d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                            fill="#ced7df"
                            transform="translate(10 9) rotate(-180)"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "0.75rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    Average 
                    Engagement
                  </span>
                  <div
                    className="sc-jDwBTQ jmFwJs"
                  >
                    <button
                      aria-label={null}
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "background": "none",
                          "backgroundColor": "unset",
                          "border": "none",
                          "borderRadius": "unset",
                          "color": "unset",
                          "cursor": "pointer",
                          "display": "unset",
                          "fontFamily": "unset",
                          "fontSize": "unset",
                          "fontWeight": "unset",
                          "lineHeight": "unset",
                          "margin": "unset",
                          "outline": "none",
                          "padding": 0,
                          "transition": "unset",
                        }
                      }
                    >
                      <div
                        className="sc-bZQynM bhDWTq"
                      >
                        <svg
                          fill="none"
                          height="11"
                          viewBox="0 0 11 11"
                          width="11"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <rect
                            fill="white"
                            height="11"
                            width="11"
                          />
                          <path
                            d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                            fill="#59626a"
                            transform="translate(10 9) rotate(-180)"
                          />
                        </svg>
                      </div>
                    </button>
                  </div>
                </div>
              </li>
              <li
                className="sc-hSdWYo ialkZe"
              >
                <div
                  className="sc-cMljjf jqqWCD sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1.25rem",
                        "fontWeight": 700,
                      }
                    }
                  >
                    1
                  </span>
                </div>
                <div
                  className="sc-brqgnP jUovdY sc-jWBwVP bnrwMw sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 700,
                      }
                    }
                  >
                    #bufferchatapac
                  </span>
                </div>
                <div
                  className="sc-cvbbAY gVmkPl sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    9
                  </span>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <span>
                      192.1k
                    </span>
                  </span>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <span>
                      1,080
                      %
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="sc-hSdWYo ialkZe"
              >
                <div
                  className="sc-cMljjf jqqWCD sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1.25rem",
                        "fontWeight": 700,
                      }
                    }
                  >
                    2
                  </span>
                </div>
                <div
                  className="sc-brqgnP jUovdY sc-jWBwVP bnrwMw sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 700,
                      }
                    }
                  >
                    #bufferchat
                  </span>
                </div>
                <div
                  className="sc-cvbbAY gVmkPl sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    28
                  </span>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <span>
                      32.9k
                    </span>
                  </span>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <span>
                      192
                      %
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="sc-hSdWYo ialkZe"
              >
                <div
                  className="sc-cMljjf jqqWCD sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1.25rem",
                        "fontWeight": 700,
                      }
                    }
                  >
                    3
                  </span>
                </div>
                <div
                  className="sc-brqgnP jUovdY sc-jWBwVP bnrwMw sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 700,
                      }
                    }
                  >
                    #BufferPodcast
                  </span>
                </div>
                <div
                  className="sc-cvbbAY gVmkPl sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    25
                  </span>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <span>
                      28.4k
                    </span>
                  </span>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <span>
                      184
                      %
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="sc-hSdWYo ialkZe"
              >
                <div
                  className="sc-cMljjf jqqWCD sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1.25rem",
                        "fontWeight": 700,
                      }
                    }
                  >
                    4
                  </span>
                </div>
                <div
                  className="sc-brqgnP jUovdY sc-jWBwVP bnrwMw sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 700,
                      }
                    }
                  >
                    #WednesdayWisdom
                  </span>
                </div>
                <div
                  className="sc-cvbbAY gVmkPl sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    9
                  </span>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <span>
                      30.3k
                    </span>
                  </span>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <span>
                      160
                      %
                    </span>
                  </span>
                </div>
              </li>
              <li
                className="sc-hSdWYo ialkZe"
              >
                <div
                  className="sc-cMljjf jqqWCD sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1.25rem",
                        "fontWeight": 700,
                      }
                    }
                  >
                    5
                  </span>
                </div>
                <div
                  className="sc-brqgnP jUovdY sc-jWBwVP bnrwMw sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 700,
                      }
                    }
                  >
                    #SundayFunday
                  </span>
                </div>
                <div
                  className="sc-cvbbAY gVmkPl sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    3
                  </span>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <span>
                      27.7k
                    </span>
                  </span>
                </div>
                <div
                  className="sc-eHgmQL PZcPK"
                >
                  <span
                    style={
                      Object {
                        "color": "#323b43",
                        "fontFamily": "\\"Roboto\\", sans-serif",
                        "fontSize": "1rem",
                        "fontWeight": 400,
                      }
                    }
                  >
                    <span>
                      156
                      %
                    </span>
                  </span>
                </div>
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Snapshots TableHeader should render the header 1`] = `
<span>
  <div
    style={
      Object {
        "width": "920px",
      }
    }
  >
    <li
      className="sc-hSdWYo ialkZe"
    >
      <div
        className="sc-jAaTju hGtsWl sc-cMljjf jqqWCD sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Rank
        </span>
      </div>
      <div
        className="sc-jWBwVP bnrwMw sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Hashtag
        </span>
      </div>
      <div
        className="sc-cvbbAY gVmkPl sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Posts
        </span>
        <div
          className="sc-jDwBTQ jBppTt"
        >
          <button
            aria-label={null}
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <div
              className="sc-bZQynM bhDWTq"
            >
              <svg
                fill="none"
                height="11"
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="white"
                  height="11"
                  width="11"
                />
                <path
                  d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                  fill="#ced7df"
                  transform="translate(1 2)"
                />
              </svg>
            </div>
          </button>
          <button
            aria-label={null}
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <div
              className="sc-bZQynM bhDWTq"
            >
              <svg
                fill="none"
                height="11"
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="white"
                  height="11"
                  width="11"
                />
                <path
                  d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                  fill="#ced7df"
                  transform="translate(10 9) rotate(-180)"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Average 
          
        </span>
        <div
          className="sc-jDwBTQ jBppTt"
        >
          <button
            aria-label={null}
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <div
              className="sc-bZQynM bhDWTq"
            >
              <svg
                fill="none"
                height="11"
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="white"
                  height="11"
                  width="11"
                />
                <path
                  d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                  fill="#ced7df"
                  transform="translate(1 2)"
                />
              </svg>
            </div>
          </button>
          <button
            aria-label={null}
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <div
              className="sc-bZQynM bhDWTq"
            >
              <svg
                fill="none"
                height="11"
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="white"
                  height="11"
                  width="11"
                />
                <path
                  d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                  fill="#ced7df"
                  transform="translate(10 9) rotate(-180)"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Average 
          
        </span>
        <div
          className="sc-jDwBTQ jBppTt"
        >
          <button
            aria-label={null}
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <div
              className="sc-bZQynM bhDWTq"
            >
              <svg
                fill="none"
                height="11"
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="white"
                  height="11"
                  width="11"
                />
                <path
                  d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                  fill="#ced7df"
                  transform="translate(1 2)"
                />
              </svg>
            </div>
          </button>
          <button
            aria-label={null}
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "background": "none",
                "backgroundColor": "unset",
                "border": "none",
                "borderRadius": "unset",
                "color": "unset",
                "cursor": "pointer",
                "display": "unset",
                "fontFamily": "unset",
                "fontSize": "unset",
                "fontWeight": "unset",
                "lineHeight": "unset",
                "margin": "unset",
                "outline": "none",
                "padding": 0,
                "transition": "unset",
              }
            }
          >
            <div
              className="sc-bZQynM bhDWTq"
            >
              <svg
                fill="none"
                height="11"
                viewBox="0 0 11 11"
                width="11"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  fill="white"
                  height="11"
                  width="11"
                />
                <path
                  d="M4.06699 0.75C4.25944 0.416667 4.74056 0.416667 4.93301 0.75L7.9641 6C8.15655 6.33333 7.91599 6.75 7.53109 6.75L1.46891 6.75C1.08401 6.75 0.843448 6.33333 1.0359 6L4.06699 0.75Z"
                  fill="#ced7df"
                  transform="translate(10 9) rotate(-180)"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </li>
  </div>
</span>
`;

exports[`Snapshots TableHeader should render the header with disabled sorting on reports 1`] = `
<span>
  <div
    style={
      Object {
        "width": "920px",
      }
    }
  >
    <li
      className="sc-hSdWYo ialkZe"
    >
      <div
        className="sc-jAaTju hGtsWl sc-cMljjf jqqWCD sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Rank
        </span>
      </div>
      <div
        className="sc-jWBwVP bnrwMw sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Hashtag
        </span>
      </div>
      <div
        className="sc-cvbbAY gVmkPl sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Posts
        </span>
        <div
          className="sc-jDwBTQ jBppTt"
        />
      </div>
      <div
        className="sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Average 
          
        </span>
        <div
          className="sc-jDwBTQ jBppTt"
        />
      </div>
      <div
        className="sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
            }
          }
        >
          Average 
          
        </span>
        <div
          className="sc-jDwBTQ jBppTt"
        />
      </div>
    </li>
  </div>
</span>
`;

exports[`Snapshots TableRow should render the hashtags 1`] = `
<span>
  <div
    style={
      Object {
        "width": "920px",
      }
    }
  >
    <li
      className="sc-hSdWYo ialkZe"
    >
      <div
        className="sc-cMljjf jqqWCD sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1.25rem",
              "fontWeight": 700,
            }
          }
        >
          1
        </span>
      </div>
      <div
        className="sc-brqgnP jUovdY sc-jWBwVP bnrwMw sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 700,
            }
          }
        >
          #SundayFunday
        </span>
      </div>
      <div
        className="sc-cvbbAY gVmkPl sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          3
        </span>
      </div>
      <div
        className="sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          <span>
            0
          </span>
        </span>
      </div>
      <div
        className="sc-eHgmQL PZcPK"
      >
        <span
          style={
            Object {
              "color": "#323b43",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
            }
          }
        >
          <span>
            0
            %
          </span>
        </span>
      </div>
    </li>
  </div>
</span>
`;
